# eheimdigital

./: README.md  pyproject.toml
eheimdigital/: EheimDigitalDevice.py  EheimDigitalHeater.py  EheimDigitalHub.py  autofeeder.py  classic_led_ctrl.py  classic_vario.py  const.py  device.py  heater.py  hub.py  ph_control.py  professionel5e.py  types.py
tests/: test_hub.py
