[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "eheimdigital"
description = "Offers a Python API for the EHEIM Digital smart aquarium devices."
version = "1.0.0"
dependencies = ["aiohttp"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
output-format = "concise"


[tool.ruff.lint]
select = ["ALL"]

ignore = ["D211", "D213", "COM812", "D203", "ISC001", "E501", "EXE002"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "RUF018"]
